# azel

./: Cargo.toml  README.md
src/: discord.rs  lib.rs  schema.rs
src/cmd/: mod.rs
src/db/: mod.rs
