[package]
name = "azel"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
bigdecimal = "0"
treeerror = "0"

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
[dependencies.tracing-log]
version = "0.2"
default-features = false
features = []
[dependencies.tracing-subscriber]
version = "0.3"
features = ["tracing-log"]

[dependencies.config]
version = "0.14"
features = ["toml"]
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",

    "rustls_backend",

    "unstable_discord_api",
    "collector",
]
[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
[dependencies.diesel]
version = "2"
features = ["postgres", "numeric", "chrono"]
[dependencies.diesel-async]
version = "0.7"
features = ["postgres"]
